--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  adapter: postgresql
+  adapter: sqlite3
   database: my_database_development
   pool: 5
   timeout: 5000
